[gd_scene load_steps=5 format=3 uid="uid://cu1xcivs4258s"]

[ext_resource type="Script" uid="uid://beg1saefbtnkq" path="res://scenes/exploit_builder_window/exploit_builder_window.gd" id="1_wo8y2"]
[ext_resource type="ButtonGroup" uid="uid://321xvg7p1of2" path="res://resources/hack_result_button_group.tres" id="2_i2ris"]
[ext_resource type="ButtonGroup" uid="uid://dtegu4p4dn710" path="res://resources/folder_hack_button_group.tres" id="3_naq6h"]
[ext_resource type="ButtonGroup" uid="uid://yfasws6o0eab" path="res://resources/computer_hack_button_group.tres" id="4_4srxw"]

[node name="ExploitBuilderWindow" type="Window"]
title = "Exploit Builder"
initial_position = 2
size = Vector2i(1200, 880)
script = ExtResource("1_wo8y2")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
text = "Select Library"

[node name="LibraryOptionButton" type="OptionButton" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
text = "Version"

[node name="VersionLineEdit" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "1.0.0"
placeholder_text = "1.0.0"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
size_flags_stretch_ratio = 0.25
text = "Memory Zone:"

[node name="MemoryZoneLineEdit" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
placeholder_text = "0xDEADC0DE"

[node name="Label2" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
size_flags_stretch_ratio = 0.25
text = "Unsec Value:"

[node name="UnsecValueLineEdit" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "lineNumsirectTransformanchoredPositionx"

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
text = "Hack Result?:"

[node name="GridContainer" type="GridContainer" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
columns = 4

[node name="ShellCheckBox" type="CheckBox" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer3/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
button_group = ExtResource("2_i2ris")
text = "Shell"

[node name="ChangePasswordCheckBox" type="CheckBox" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer3/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
button_group = ExtResource("2_i2ris")
text = "Change Password"

[node name="RandomFolderCheckBox" type="CheckBox" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer3/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
button_group = ExtResource("2_i2ris")
text = "Random Folder"

[node name="ComputerHackCheckBox" type="CheckBox" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer3/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
button_group = ExtResource("2_i2ris")
text = "Computer Hack"

[node name="FirewallDisableCheckBox" type="CheckBox" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer3/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
button_group = ExtResource("2_i2ris")
text = "Firewall Disable"

[node name="OverrideSettingsCheckBox" type="CheckBox" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer3/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
button_group = ExtResource("2_i2ris")
text = "Override Settings"

[node name="TrafficLightCheckBox" type="CheckBox" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer3/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
button_group = ExtResource("2_i2ris")
text = "Traffic Light Control"

[node name="HBoxContainer7" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer7"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
text = "Permission:"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer7"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PermissionGuestCheckBox" type="CheckBox" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer7/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Guest"

[node name="PermissionNonRootCheckBox" type="CheckBox" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer7/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Non root user"

[node name="PermissionRootCheckBox" type="CheckBox" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer7/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "ROOT"

[node name="HSeparator3" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
text = "Requirements:"

[node name="HBoxContainer8" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer8"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PathExistsLineEdit" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer8/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Path Exists"

[node name="RootLoginCheckBox" type="CheckBox" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer8/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Root login"

[node name="AnyUserCheckBox" type="CheckBox" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer8/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Any User"

[node name="GuestLoginCheckBox" type="CheckBox" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer8/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Guest login"

[node name="LibReqOptionButton" type="OptionButton" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer8/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="LibVerLineEdit" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer8/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Lib Ver"

[node name="UserRegCountLineEdit" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer8/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "User Reg"

[node name="PortFwdCountLineEdit" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer8/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Port Fwd"

[node name="GatewayConnCountLineEdit" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer8/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Gateway Conn"

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer4" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer4"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
text = "Folder Hack:"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer4/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="FolderHackContentCheckBox" type="CheckBox" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer4/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
button_group = ExtResource("3_naq6h")
text = "Folder Content"

[node name="FolderHackContentLineEdit" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer4/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "/lib"

[node name="FolderHackPasswdCheckBox" type="CheckBox" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer4/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
button_group = ExtResource("3_naq6h")
text = "/etc/passwd Content"

[node name="FolderHackMailCheckBox" type="CheckBox" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer4/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
button_group = ExtResource("3_naq6h")
text = "Mail.txt Content"

[node name="HBoxContainer5" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer5"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
text = "Computer Hack:"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ComputerHackPasswdCheckBox" type="CheckBox" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer5/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
button_group = ExtResource("4_4srxw")
text = "Decipher passwd"

[node name="ComputerHackBankCheckBox" type="CheckBox" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer5/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
button_group = ExtResource("4_4srxw")
text = "Decipher /home/users/Bank.txt"

[node name="ComputerHackMailCheckBox" type="CheckBox" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer5/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
button_group = ExtResource("4_4srxw")
text = "Decipher /home/users/Mail.txt"

[node name="HBoxContainer6" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer6"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
text = "New Password:"

[node name="NewPasswordLineEdit" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer6"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "123456"
secret = true

[node name="BakeButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Bake"

[node name="OutputCodeEdit" type="CodeEdit" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
editable = false
minimap_draw = true

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Suggested File Name"

[node name="SuggestNameLineEdit" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
editable = false
